WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283001
Unreviewed fix watchOS build after
286486@main
https://bugs.webkit.org/show_bug.cgi?id=283001
Summary
Unreviewed fix watchOS build after 286486@main
David Degazio
Reported
2024-11-12 11:20:01 PST
rdar://139735779
https://commits.webkit.org/286486@main
broke the watchOS build by accessing m_catchableFromWasm without checking at build time if WASM is enabled, which it isn't on watchOS.
Attachments
Add attachment
proposed patch, testcase, etc.
David Degazio
Comment 1
2024-11-12 11:22:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36541
EWS
Comment 2
2024-11-12 11:28:49 PST
Committed
286493@main
(bcf1df7bd5d1): <
https://commits.webkit.org/286493@main
> Reviewed commits have been landed. Closing PR #36541 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug