Unreviewed fix watchOS build after 286486@main https://bugs.webkit.org/show_bug.cgi?id=283001 rdar://139735779

* Source/JavaScriptCore/runtime/ErrorInstance.h:
(JSC::ErrorInstance::setStackOverflowError):
(JSC::ErrorInstance::setOutOfMemoryError):

Canonical link: https://commits.webkit.org/286493@main