Source/JavaScriptCore/runtime/ErrorInstance.h
@@ -82,13 +82,17 @@ public:
     ErrorType errorType() const { return m_errorType; }
     void setStackOverflowError()
     {
+#if ENABLE(WEBASSEMBLY)
         m_catchableFromWasm = false;
+#endif
         m_stackOverflowError = true;
     }
     bool isStackOverflowError() const { return m_stackOverflowError; }
     void setOutOfMemoryError()
     {
+#if ENABLE(WEBASSEMBLY)
         m_catchableFromWasm = false;
+#endif
         m_outOfMemoryError = true;
     }
     bool isOutOfMemoryError() const { return m_outOfMemoryError; }
